[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goldengraphs"
version = "0.1.0"
description = "Graph algorithms and visualization tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=9.0.1", "ruff>=0.14.6"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["UP", "D", "INP", "S", "PLR", "F", "FIX"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
ignore = ["**/__init__.py"]
typeCheckingMode = "strict"
